--- a/layout.css
+++ b/layout.css
@@ -15,6 +15,7 @@ x-grow,
 }
 
 .center,
+.x-view,
 main {
     display: flex;
     justify-content: center;
@@ -48,18 +49,25 @@ main>* {
 }
 
 .x-view {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-sizing: border-box;
     padding: 24px 16px;
     /* Animations */
-    transition: transform 500ms, opacity 300ms;
-    will-change: transform, opacity;
-    transform-origin: center;
+    opacity: 0;
+    animation-fill-mode: both;
+    animation-duration: 500ms;
+    box-sizing: border-box;
+}
+
+.x-view.x-show{
+    opacity: 1;
+    z-index: 1;
+}
+
+.x-view.x-entry-animation {
+    animation-name: from-right;
+}
+
+.x-view.x-exit-animation {
+    animation-name: to-left;
 }
 
 @media (min-width: 420px) {
@@ -72,7 +80,7 @@ main>* {
 }
 
 @media (min-width: 1280px) and (min-height: 800px) {
-      .x-view {
+    .x-view {
         width: 100%;
         max-width: 1028px;
         max-height: 672px;
