--- a/inputs/inputs.css
+++ b/inputs/inputs.css
@@ -44,6 +44,7 @@ button.small,
     line-height: 38px;
 }
 
+
 /* Text Inputs */
 
 input[type="text"],
@@ -57,6 +58,7 @@ input[type="number"] {
     text-align: center;
     border-bottom: 1px solid transparent;
     border-radius: 0;
+    font-size: 15px;
 }
 
 input[type="text"]::placeholder,
@@ -70,7 +72,7 @@ input[type="number"]::-webkit-input-placeholder {
 
 input[type="text"]:focus,
 input[type="password"]:focus {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 input[type="text"].small {
@@ -102,6 +104,13 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+input[type="password"] {
+    font-size: 18px;
+    line-height: 32px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    width: 100%;
+    max-width: 368px;
+}
 
 
 /* Range Slider */
