global boxsizing: border-box unless specified explicitly

--- a/layout/layout.css
+++ b/layout/layout.css
@@ -7,6 +7,11 @@ body {
     margin: 0;
     background: #EEEEEE;
     color: white;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 x-grow,
