--- a/inputs/inputs.css
+++ b/inputs/inputs.css
@@ -59,6 +59,10 @@ input[type="number"] {
     border-bottom: 1px solid transparent;
     border-radius: 0;
     font-size: 15px;
+    font-family: inherit;
+    font-style: inherit;
+    font-variant: inherit;
+    padding: 1px;
 }
 
 input[type="text"]::placeholder,
