--- a/icons/icons.css
+++ b/icons/icons.css
@@ -8,6 +8,12 @@
     background-repeat: no-repeat;
     background-position: center;
     display: inline-block;
+}
+
+[icon-back],
+[icon-export],
+[icon-paste],
+[icon-upload] {
     cursor: pointer;
 }
 
