--- a/layout/layout.css
+++ b/layout/layout.css
@@ -108,10 +108,10 @@ x-header {
 
 /* Lists */
 
-ul{
+ul, ol{
     padding-left: 24px;
 }
 
-ul > li {
+ul > li, ol >li {
     padding-bottom: 8px;
 }
