--- a/icons/icons.css
+++ b/icons/icons.css
@@ -3,7 +3,8 @@
 [icon-paste],
 [icon-upload],
 [icon-person],
-[icon-warning] {
+[icon-warning],
+[icon-add] {
     width: 40px;
     height: 40px;
     background-repeat: no-repeat;
@@ -52,4 +53,8 @@
 
 [icon-warning] {
   background-image: url('data:image/svg+xml,<svg fill="red" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"> <path d="M0 0h24v24H0z" fill="none"/> <path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/> </svg>');
+}
+
+[icon-add] {
+    background-image: url('data:image/svg+xml,<svg fill="%23FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/></svg>')
 }
