--- a/inputs/inputs.css
+++ b/inputs/inputs.css
@@ -200,3 +200,7 @@ input[type=range]:focus {
     outline: none;
     /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
+
+select {
+    height: 35px;
+}
