--- a/layout/layout.css
+++ b/layout/layout.css
@@ -2,8 +2,8 @@ html,
 body {
     overflow-x: hidden;
     min-height: 100%;
+    width: 100%;
     display: flex;
-    flex-grow: 1;
     margin: 0;
     color: white;
     background: var(--primary-background);
