Add left-to-right version of primary background

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #536DFE;
     --primary-background: linear-gradient(#536DFE, #a553fe);
+    --primary-background-toright: linear-gradient(90deg, #536DFE, #a553fe);
     /* teal-a200 */
     --success-color: #64FFDA;
     /* red-a400 */
