--- a/layout/layout.css
+++ b/layout/layout.css
@@ -38,6 +38,11 @@ main {
     height: 100%;
 }
 
+.row {
+    display: flex;
+    align-items: center;
+}
+
 .fit {
     position: absolute;
     top: 0;
