--- a/layout/layout.css
+++ b/layout/layout.css
@@ -100,6 +100,10 @@ ul > li, ol >li {
     visibility: hidden;
 }
 
+.display-none {
+    display: none !important;
+}
+
 iframe[name="keyguard"],
 iframe[name="network"] {
     display: none;
