--- a/layout/layout.css
+++ b/layout/layout.css
@@ -31,6 +31,11 @@ x-grow,
     flex-grow: 1;
 }
 
+x-grow[x-grow="2"],
+[x-grow="2"] {
+    flex-grow: 2;
+}
+
 .center,
 main {
     display: flex;
