--- a/theme/theme.css
+++ b/theme/theme.css
@@ -13,4 +13,5 @@
     --secondary-cta-color: rgba(255, 255, 255, 0.7);
     --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
     --max-width: 368px;
+    --max-content-width: 960px;
 }
