--- a/layout/layout.css
+++ b/layout/layout.css
@@ -48,8 +48,14 @@ main {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    width: 100%;
+}
+
+.full-height {
     height: 100%;
+}
+
+.full-width {
+    width: 100%;
 }
 
 .row {
