--- a/typography/typography.css
+++ b/typography/typography.css
@@ -59,9 +59,11 @@ p a {
 
 a[secondary],
 button[secondary] {
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
     cursor:  pointer;
+    text-transform: uppercase;
+    letter-spacing: 0.16em;
     display: block;
 }
 
