Use relative path for the font files
This should work in the built app as well, since everything is in the root repo.

--- a/material-icons/material-icons.css
+++ b/material-icons/material-icons.css
@@ -8,12 +8,12 @@
   @asset(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.woff)
   @asset(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.ttf)
    */
-  src: url(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: url(./MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       url(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.woff2) format('woff2'),
-       url(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.woff) format('woff'),
-       url(/libraries/nimiq-style/material-icons/MaterialIcons-Regular.ttf) format('truetype');
+       url(./MaterialIcons-Regular.woff2) format('woff2'),
+       url(./MaterialIcons-Regular.woff) format('woff'),
+       url(./MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
